# fbx-viewer

./: .gitignore  CMakeLists.txt  README.md  fbx-viewer.code-workspace  sync_resources.sh
data/scenes/: cube_animation_test.fbx
src/: fbx_loader.cpp  fbx_loader.h  main.cpp
